@@ -4,6 +4,9 @@ Changelog
 2.0 - unreleased
 ----------------
 
+- Removed the deprecated `hide` option form the portlet.
+  [hannosch]
+
 - Update license to GPL version 2 only.
   [hannosch]
 
